tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoQuestLine__TriggerHafniumSk-5pXaevjTR-atLo3tdEZMEw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17929753596610890771,
  "prerequisites": [
    3041,
    213
  ],
  "properties": {
    "auto_claim": true,
    "desc": "No Description",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": true,
    "locked_progress": 0,
    "name": "Trigger: Hafnium Skip",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3041,
    213
  ],
  "rewards": [],
  "tasks": []
}
